# OTHR-Pr

./: .gitattributes  README.md
MT5 Code/Experts/AMIS/: AMIS.mq5  README.md
MT5 Code/Experts/AdaptiveSqueeze_MomentumBurst/: AdaptiveSqueeze_MomentumBurst.mq5  README.md
MT5 Code/Experts/GoldConsolidation_MACD/: README.md  (+1 more)
MT5 Code/Indicators/: README.md
N8N/: README.md  credentials.example.env
N8N/docs/: FRAMEWORK.md
N8N/workflows/: 01_binance_btc_trades_telegram.json  02_binance_trades_ai_telegram.json  03_economic_calendar_telegram.json  04_ai_trend_sentiment.json  05_combined_trading_signals.json
PocketOption/: .env.example  MANIFEST.in  README.md  pyproject.toml  requirements.txt
PocketOption/notebooks/: guia_pocketoption.ipynb  pocketoption_demo.ipynb
PocketOption/pocketoption_connector/: __init__.py  __main__.py  client.py  config.py  credential_login.py  easy.py  exceptions.py
Polymarket Trader/: .gitignore  README.md  config.ini  requirements.txt  run.py  test.ipynb
Polymarket Trader/backend/: config.py  llm_client.py  main.py  models.py  polymarket_client.py  websocket_manager.py
Polymarket Trader/docs/: ARCHITECTURE.md  agent-flow.mmd
Polymarket Trader/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
Trading Terminal/: .env.example  README.md  install.bat  run.py  run_quasar.bat  run_quasar.py  start.bat  start_backend.bat
Trading Terminal/backend/: __init__.py  main.py  requirements.txt
Trading Terminal/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
(+368 files in other folders)
